--- a/news_system_ui.vcxproj
+++ b/news_system_ui.vcxproj
@@ -131,7 +131,9 @@
     </ClCompile>
     <ClCompile Include="getfile.cpp" />
     <ClCompile Include="hashtable.cpp" />
+    <ClCompile Include="inputscene.cpp" />
     <ClCompile Include="inverted_file_index.cpp" />
+    <ClCompile Include="listscene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="news_extraction.cpp" />
     <ClCompile Include="news_system_ui.cpp" />
@@ -147,6 +149,7 @@
   <ItemGroup>
     <QtUic Include="DialogButtonRight.ui" />
     <QtUic Include="input.ui" />
+    <QtUic Include="list.ui" />
     <QtUic Include="MainWindow.ui" />
     <QtUic Include="news_system_ui.ui" />
   </ItemGroup>
@@ -169,10 +172,23 @@
     <ClInclude Include="FileLink.h" />
     <ClInclude Include="GeneratedFiles\ui_DialogButtonRight.h" />
     <ClInclude Include="GeneratedFiles\ui_input.h" />
+    <ClInclude Include="GeneratedFiles\ui_list.h" />
     <ClInclude Include="GeneratedFiles\ui_news_system_ui.h" />
     <ClInclude Include="getfile.h" />
     <ClInclude Include="hashtable.h" />
+    <QtMoc Include="inputscene.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="inverted_file_index.h" />
+    <QtMoc Include="listscene.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="news_extraction.h" />
     <ClInclude Include="query.h" />
     <ClInclude Include="recommand.h" />
