add page scene to display html file

--- a/news_system_ui.vcxproj.filters
+++ b/news_system_ui.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="listscene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pagescene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="news_system_ui.h">
@@ -116,6 +119,9 @@
     <QtMoc Include="inputscene.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="pagescene.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="news_system_ui.ui">
@@ -131,6 +137,9 @@
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="list.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="page.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
@@ -195,6 +204,9 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_list.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_page.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
