--- a/news_system_ui.vcxproj
+++ b/news_system_ui.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="news_extraction.cpp" />
     <ClCompile Include="news_system_ui.cpp" />
+    <ClCompile Include="pagescene.cpp" />
     <ClCompile Include="query.cpp" />
     <ClCompile Include="recommand.cpp" />
     <ClCompile Include="regularization.cpp" />
@@ -152,6 +153,7 @@
     <QtUic Include="list.ui" />
     <QtUic Include="MainWindow.ui" />
     <QtUic Include="news_system_ui.ui" />
+    <QtUic Include="page.ui" />
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="news_system_ui.qrc" />
@@ -174,6 +176,7 @@
     <ClInclude Include="GeneratedFiles\ui_input.h" />
     <ClInclude Include="GeneratedFiles\ui_list.h" />
     <ClInclude Include="GeneratedFiles\ui_news_system_ui.h" />
+    <ClInclude Include="GeneratedFiles\ui_page.h" />
     <ClInclude Include="getfile.h" />
     <ClInclude Include="hashtable.h" />
     <QtMoc Include="inputscene.h">
@@ -190,6 +193,12 @@
       <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
     </QtMoc>
     <ClInclude Include="news_extraction.h" />
+    <QtMoc Include="pagescene.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="query.h" />
     <ClInclude Include="recommand.h" />
     <ClInclude Include="regularization.h" />
